Fix collapsed post visibility for default glitch style

--- a/app/javascript/flavours/glitch/styles/urusai-fixes.scss
+++ b/app/javascript/flavours/glitch/styles/urusai-fixes.scss
@@ -8,3 +8,7 @@
 .announcements__container {
   width: 100% !important;
 }
+
+.status__wrapper.collapsed .status__content {
+  overflow: visible !important;
+}
